Bug 397428. Return 'complete' on *all* paths whenever we push a rowgroup to the next page. r=bernd,sr=bzbarsky,a=schrep